# resume-cold-read

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/agents/: eval-company-researcher.md
calibration/: answer-key.md
docs/brainstorms/: 2026-04-14-install-story-requirements.md
docs/ideation/: 2026-04-14-open-ideation.md
docs/plans/: 2026-04-14-001-feat-install-story-plan.md
examples/companies/: meridian-ai.md
examples/job-descriptions/: senior-pm.md  senior-swe.md
prompts/: manifest.json  phase2-pm.md  preamble.md
src/cold_read/: cli.py  config.py  doctor.py  errors.py  eval.py  output.py  prompts.py  registry.py  wizard.py
src/cold_read/_resources/prompts/: calibration-prompt.md  manifest.json  phase1-visual.md  phase2-swe.md  preamble.md  report-guide.md  task-jd-eval.md  task-jd-vision.md
src/cold_read/providers/: __init__.py  _encoding.py  azure_maas.py  azure_openai.py  claude_cli.py  shape.py
tests/: conftest.py  test_config.py  test_doctor.py  test_errors.py  test_explain.py  test_output.py  test_prompts_loader.py  test_registry.py  test_wizard.py
tests/providers/: test_azure_maas.py  test_azure_openai.py  test_claude_cli.py  test_registry.py
