[project]
name = "resume-cold-read"
version = "0.1.0"
description = "Resume Cold Reader — evaluate resumes with vision models the way a recruiter would."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "BSD-3-Clause"}
dependencies = [
    "openai",
    "python-dotenv",
    "rich",
    "typer",
]

[project.scripts]
resume-cold-read = "cold_read.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cold_read"]
