[project]
name = "resume-cold-read"
version = "0.4.0"
description = "Resume Cold Reader — evaluate resumes with vision models the way a recruiter would."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "BSD-3-Clause"}
dependencies = [
    "httpx>=0.27",
    "openai",
    "platformdirs>=4",
    "python-dotenv",
    "rich",
    "typer",
]

[project.scripts]
resume-cold-read = "cold_read.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-mock>=3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cold_read"]
# Packaged bucket-1 resources (prompts, calibration images, manifest) ship
# inside the wheel under src/cold_read/_resources/. hatchling picks up
# non-Python files under a packaged directory by default, so an explicit
# force-include would duplicate entries.

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
